优化影响分析的表述

--- a/EO-14117_岗位与平台隔离影响分析报告.md
+++ b/EO-14117_岗位与平台隔离影响分析报告.md
@@ -44,14 +44,14 @@
 
 | 业务场景 | 具体实操案例 (Specific Case) | 涉及岗位 | 依赖数据/权限 | 隔离影响 | 影响详情 | 建议方案 |
 | :--- | :--- | :--- | :--- | :--- | :--- | :--- |
-| **1. 数仓建设** | **Case**: 编写 Spark 任务从 eventlog ods 原始数据解析到 dwd 表，需处理非结构化数据，适配各种原始日志格式。 | 大数据工程师 | **数据**：Raw Data (原始日志)<br>**平台**：Hue, Airflow | ⭐⭐⭐⭐⭐ | **基建瘫痪**：无法读取 Source 层原始数据，清洗逻辑无法编写，导致下游报表全线断流。 | **脱敏前置**：在入湖层实施自动化脱敏。<br>**盲写代码**：逻辑由中方盲写，美方审核部署。 |
-| **2. 运维故障紧急抢修** | **Case**: 生产环境主库突发死锁导致服务不可用，DBA 需立即登录服务器 Kill 异常 Session 并查看 Binlog 定位原因。 | SRE、DBA | **权限**：Root / Admin<br>**工具**：SSH, CLI | ⭐⭐⭐⭐⭐ | **运维失控**：回收高权限账号意味着失去对基础设施的控制，无法处理P0级故障，业务面临停摆风险。 | **平台化运维**：强制 NoSSH，操作通过平台审计。<br>**应急破窗**：保留物理隔离的紧急账号。 |
+| **1. 数仓建设** | **Case**: 编写 Spark 任务从 EventLog ODS 原始数据解析到 DWD 表，需要写代码去解析各种乱七八糟的原始格式。 | 大数据工程师 | **数据**：Raw Data (原始日志)<br>**平台**：Hue, Airflow | ⭐⭐⭐⭐⭐ | **基建瘫痪**：无法读取 Source 层原始数据，清洗逻辑无法编写，导致下游报表全线断流。 | **脱敏前置**：在入湖层实施自动化脱敏。<br>**盲写代码**：逻辑由中方盲写，美方审核部署。 |
+| **2. 运维故障紧急抢修** | **Case**: 凌晨两点收到报警，生产环境主库突发死锁导致服务不可用，DBA 需立即登录服务器 Kill 异常 Session 并查看 Binlog 定位原因。 | SRE、DBA | **权限**：Root / Admin<br>**工具**：SSH, CLI | ⭐⭐⭐⭐⭐ | **运维失控**：回收高权限账号意味着失去对基础设施的控制，无法处理P0级故障，业务面临停摆风险。 | **平台化运维**：强制 NoSSH，操作通过平台审计。<br>**应急破窗**：保留物理隔离的紧急账号。 |
 | **3. 反作弊** | **Case**: 发现一批 IP 在短时间内注册大量空壳账号，需聚合查询 DeviceID、IP 网段和行为序列，确认是否为脚本攻击并更新封禁规则。 | 反作弊工程师 | **数据**：设备指纹、IP、行为日志<br>**平台**：Zeppelin, SQL | ⭐⭐⭐⭐⭐ | **风控盲区**：无法接触攻击细节数据，无法识别新型攻击模式，安全防线失效。 | **策略下沉**：中方专注通用特征工程。<br>**业务移交**：具体攻击研判移交海外团队。 |
-| **4. 审核策略** | **Case**: 针对“约炮”、“讨钱“、”违禁词“等违规内容的样本量异常，需调取被误杀和漏放的原始样本及其元数据，校准审核标准。 | 社区管理<br>策略 PM | **内容**：原始图片/视频<br>**数据**：审核日志 | ⭐⭐⭐⭐⭐ | **管理盲区**：无法查看争议内容实体，无法评估审核质量，策略优化失去“Ground Truth”。 | **受控抽检**：建立去标识化/水印样本库，仅供 Case Study 复盘使用。 |
-| **5. 数据分析** | **Case 1 (用户增长)**: 新版上线后“注册转化率”暴跌，需下钻分析流失用户在漏斗各环节的具体行为。<br>**Case 2 (异动排查)**: 业务大盘 ARPU 数据下降明显，当 tableau 不足以支持问题分析时，需写 SQL 查询分析问题。 | 增长 PM<br>数据分析师 | **数据**：用户打点日志, 业务数据表（配对、聊天、订单等） <br>**工具**：Tableau, Hue, SQL | ⭐⭐⭐⭐⭐ | **决策失真**：无法下钻定位业务症结；<br>**分析瘫痪**：无明细数据权限导致排查完全停滞。 | **脱敏数仓**：建立 Hash ID 中间层与脱敏 DWD 层。<br>**协作代查**：建立海外代查机制与受控远程桌面。 |
+| **4. 审核策略** | **Case 1 (质检分析)**: 针对“约炮”、“讨钱“、”违禁词“等举报内容的案例数量异常，需调取被误杀和漏放的原始样本及其元数据，校准审核标准。<br>**Case 2 (标准对齐)**: 对用户头像 Good、S、Inapt 等审核标准的执行，需要定期抽检。 | 社区管理、PM | **内容**：原始用户资料、聊天信息等<br>**数据**：审核日志 | ⭐⭐⭐⭐⭐ | **管理盲区**：无法查看争议内容实体，无法评估审核质量，策略优化失去“Ground Truth”。 | **受控抽检**：建立去标识化/水印样本库，仅供 Case Study 复盘使用。 |
+| **5. 数据分析** | **Case 1 (用户增长)**: 新版上线后“注册转化率”暴跌，需下钻分析流失用户在漏斗各环节的具体行为。<br>**Case 2 (异动排查)**: 业务大盘 ARPU 数据下降明显，当 tableau 不足以支持问题分析时，需写 SQL 查询分析问题。<br>**Case 3 (AB 实验)**: AB 实验结果与预期相差过大，需要排查原因。 | 增长、PM、数据分析师 | **数据**：用户打点日志, 业务数据表（配对、聊天、订单等） <br>**工具**：Tableau, Hue, SQL | ⭐⭐⭐⭐⭐ | **决策失真**：无法下钻定位业务症结；<br>**分析无法进行**：无明细数据权限导致排查完全停滞。 | **脱敏数仓**：建立 Hash ID 中间层与脱敏 DWD 层。<br>**协作代查**：建立海外代查机制与受控远程桌面。 |
 | **6. 广告投放归因** | **Case**: 对比 Google Ads 后台消耗与 AppsFlyer 归因数据，计算特定 Campaign 的 LTV/ROI，调整出价策略。 | 广告优化师 | **数据**：归因数据 (Attribution)<br>**平台**：AppsFlyer | ⭐⭐⭐⭐ | **投放盲投**：失去三方归因数据的精细化校验能力，无法精准评估渠道质量，预算浪费风险高。 | **代理操作**：美方协助配置与导出报表。<br>**去标识化**：仅开放 Campaign 级聚合数据。 |
-| **7. 线上客诉解决** | **Case**: VIP 用户反馈“充值扣款成功但金币未到账”，研发需通过查询服务端订单处理日志或在 Kibana 搜索 `uid=8888` 的支付 API 完整请求/响应日志等来定位 Bug。 | 后端研发<br>QA | **日志**：Kibana (Req/Res)<br>**数据**：订单表 Select | ⭐⭐⭐⭐ | **排查受阻**：无日志权限导致无法复现线上特定用户的边缘 Case，修复周期从分钟级通过天级。 | **日志脱敏**：全链路日志自动掩码系统。<br>**影子环境**：全脱敏数据 Staging 环境。 |
-| **8. 客户端崩溃修复** | **Case**: 监控报警显示机型崩溃率异常升高，需查看 Crashlytics 上的崩溃堆栈（Stack Trace）及关联的设备状态信息，若排查到数据异常还需要关联用户数据分析。 | Android/iOS<br>研发 | **数据**：Crash Dump<br>**平台**：Firebase | ⭐⭐ | **效率降低**：虽不直接涉及 PII，但这部分信息属于设备级数据，若管控过严会影响适配修复。 | **工具筛选**：开放监控工具，屏蔽 UserID 关联。 |
+| **7. 线上客诉解决** | **Case**: VIP 用户反馈“充值扣款成功但金币未到账”，研发需通过查询服务端订单处理日志或在 Kibana 搜索 `uid=8888` 的支付 API 完整请求/响应日志等来定位 Bug。 | 研发、QA | **日志**：Kibana (Req/Res)<br>**数据**：订单表 Select | ⭐⭐⭐⭐ | **排查受阻**：无日志权限导致无法复现线上特定用户的边缘 Case，修复周期从分钟级通过天级。 | **日志脱敏**：全链路日志自动掩码系统。<br>**影子环境**：全脱敏数据 Staging 环境。 |
+| **8. 客户端崩溃修复** | **Case**: 监控报警显示机型崩溃率异常升高，需查看 Crashlytics 上的崩溃堆栈（Stack Trace）及关联的设备状态信息，若排查到数据异常还需要关联用户数据分析。 | Android/iOS 研发 | **数据**：Crash Dump<br>**平台**：Firebase | ⭐⭐ | **效率降低**：虽不直接涉及 PII，但这部分信息属于设备级数据，若管控过严会影响适配修复。 | **工具筛选**：开放监控工具，屏蔽 UserID 关联。 |
 
 ---
 
